--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "pasha-grill-wi",
 	"version": "0.0.1",
 	"scripts": {
-		"dev": "vite dev",
+		"dev": "vite --host",
 		"build": "vite build",
 		"preview": "vite preview",
 		"test": "npm run test:integration && npm run test:unit",
@@ -43,8 +43,11 @@
 		"@prisma/client": "^5.3.1",
 		"bits-ui": "^0.5.7",
 		"clsx": "^2.0.0",
+		"formsnap": "^0.1.3",
 		"lucide-svelte": "^0.279.0",
+		"sveltekit-superforms": "^1.7.1",
 		"tailwind-merge": "^1.14.0",
-		"tailwind-variants": "^0.1.14"
+		"tailwind-variants": "^0.1.14",
+		"zod": "^3.22.2"
 	}
 }
