--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.20.4",
 		"@types/cookie": "^0.5.1",
+		"@types/uuid": "^9.0.4",
 		"@typescript-eslint/eslint-plugin": "^6.0.0",
 		"@typescript-eslint/parser": "^6.0.0",
 		"autoprefixer": "^10.4.15",
@@ -41,6 +42,7 @@
 	"type": "module",
 	"dependencies": {
 		"@prisma/client": "^5.3.1",
+		"@supabase/supabase-js": "^2.36.0",
 		"bits-ui": "^0.5.7",
 		"clsx": "^2.0.0",
 		"formsnap": "^0.1.3",
@@ -48,6 +50,7 @@
 		"sveltekit-superforms": "^1.7.1",
 		"tailwind-merge": "^1.14.0",
 		"tailwind-variants": "^0.1.14",
+		"uuid": "^9.0.1",
 		"zod": "^3.22.2"
 	}
 }
