--- a/package.json
+++ b/package.json
@@ -46,11 +46,13 @@
 		"bits-ui": "^0.5.7",
 		"clsx": "^2.0.0",
 		"formsnap": "^0.1.3",
+		"i18next": "^23.5.1",
 		"lucide-svelte": "^0.279.0",
 		"sveltekit-superforms": "^1.7.1",
 		"tailwind-merge": "^1.14.0",
 		"tailwind-variants": "^0.1.14",
 		"uuid": "^9.0.1",
-		"zod": "^3.22.2"
+		"zod": "^3.22.2",
+		"zod-i18n-map": "^2.19.0"
 	}
 }
