--- a/package.json
+++ b/package.json
@@ -41,12 +41,14 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@lucia-auth/adapter-prisma": "^3.0.1",
 		"@prisma/client": "^5.3.1",
 		"@supabase/supabase-js": "^2.36.0",
 		"bits-ui": "^0.5.7",
 		"clsx": "^2.0.0",
 		"formsnap": "^0.1.3",
 		"i18next": "^23.5.1",
+		"lucia": "^2.7.0",
 		"lucide-svelte": "^0.279.0",
 		"sveltekit-superforms": "^1.7.1",
 		"tailwind-merge": "^1.14.0",
