add postinstall for prisma

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 		"dev": "vite --host",
 		"build": "vite build",
 		"preview": "vite preview",
+		"postinstall": "prisma generate",
 		"test": "npm run test:integration && npm run test:unit",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
