add support for client side enums

--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
 		"build": "vite build",
 		"preview": "vite preview",
 		"postinstall": "prisma generate",
+		"prisma:inline": "cp ./node_modules/.prisma/client/*.js ./node_modules/@prisma/client",
+		"prisma:migrate": "prisma migrate deploy && npm run prisma:inline",
+		"prisma:migrate:dev": "prisma migrate dev && npm run prisma:inline",
+		"prisma:generate": "prisma generate && npm run prisma:inline",
 		"test": "npm run test:integration && npm run test:unit",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
